<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rtc_bg_config_card"
    android:orientation="vertical"
    android:padding="10dp"
    tools:showIn="@layout/activity_audio_effect_mixing">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        tools:text="@string/label_mixing_file_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resource_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/label_mixing_file_label" />

        <EditText
            android:id="@+id/resource_input"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:enabled="false"
            android:minHeight="36dp"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textSize="12sp"
            tools:text="music.mp3" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_preload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_preload"
            tools:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_unload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_unload"
            tools:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_total_time_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_total_time_length" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_jump_time" />

        <EditText
            android:id="@+id/progress_input"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:minWidth="100dp"
            tools:text="100" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/progress_input_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            tools:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_play"
            tools:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_pause"
            tools:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_resume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_resume"
            tools:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_stop"
            tools:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_volume" />

        <SeekBar
            android:id="@+id/volume_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:max="400"
            android:progress="100" />

        <TextView
            android:id="@+id/volume_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_100" />
    </LinearLayout>
</LinearLayout>