<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vertc.api.example.examples.audio.RawAudioDataActivity">

    <FrameLayout
        android:id="@+id/local_view_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/room_id_input"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_room_id" />

        <Button
            android:id="@+id/btn_join_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_join_room" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/audio_callback_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_callback_record" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/audio_callback_playback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_callback_playback" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/audio_callback_mixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_callback_mixed" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/audio_callback_remote_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_callback_remote_user" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>