<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vertc.api.example.examples.room.CrossRoomPKActivity">

    <FrameLayout
        android:id="@+id/local_view_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_room_input"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_room_id"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_join_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_join_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_join_room"
        app:layout_constraintBottom_toTopOf="@id/transmit_room_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/transmit_room_input"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_forward_to_room_id"
        app:layout_constraintBottom_toTopOf="@id/btn_start_transmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_start_transmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/button_start"
        app:layout_constraintBottom_toTopOf="@id/btn_update_transmit"
        app:layout_constraintEnd_toStartOf="@id/btn_stop_transmit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_stop_transmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_stop"
        app:layout_constraintBottom_toBottomOf="@id/btn_start_transmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_start_transmit"
        app:layout_constraintTop_toTopOf="@id/btn_start_transmit" />

    <Button
        android:id="@+id/btn_update_transmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/button_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_pause_transmit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_pause_transmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/button_pause"
        app:layout_constraintBottom_toBottomOf="@id/btn_update_transmit"
        app:layout_constraintEnd_toStartOf="@id/btn_resume_transmit"
        app:layout_constraintStart_toEndOf="@id/btn_update_transmit"
        app:layout_constraintTop_toTopOf="@id/btn_update_transmit" />

    <Button
        android:id="@+id/btn_resume_transmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_resume"
        app:layout_constraintBottom_toBottomOf="@id/btn_update_transmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_pause_transmit"
        app:layout_constraintTop_toTopOf="@id/btn_update_transmit" />


</androidx.constraintlayout.widget.ConstraintLayout>