<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".examples.video.customrender.CustomVideoRenderActivity">

    <FrameLayout
        android:id="@+id/local_view_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/main_room_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        >

        <EditText
            android:id="@+id/room_id_input"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/hint_room_id"
            android:paddingStart="5dp"
            />
        <Button
            android:id="@+id/btn_join_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_join_room"
            android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_video_format"/>

        <Spinner
            android:id="@+id/video_format_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:entries="@array/videoFormat"
            android:spinnerMode="dropdown"
            android:background="@drawable/rtc_spinner_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        >

        <Button
            android:id="@+id/btn_start_render"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_render"
            />

        <Button
            android:id="@+id/btn_stop_render"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/button_stop_render"
            />


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>